[tool.poetry]
name = "AdServer"
version = "0.1.0"
description = "Advertise"
authors = ["SealedSaucer"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.1"
"discord.py-self" = {git = "https://github.com/dolfies/discord.py-self"}
discord = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
